retail-media/v2024.10/docs/authentication.mdx
---
title: "Overview"
---
import { EndpointBadge } from "/snippets/EndpointBadge.jsx";

1. Concepts

# Introduction

* To get started with our APIs, use the endpoint below to generate an Access Token with your API credentials.

* The access token is a Bearer token to be included in the Authorization Header of all Campaign or Analytics API requests.

* Multiple tokens may be generated, each valid for 15 minutes or 900 seconds.

***

# Endpoint

<EndpointBadge method="post">
```http
https://api.criteo.com/oauth2/token
```
</EndpointBadge>

<Info>
  ### Note

  Generate another access token when it expires, signaled by a `401 Unauthorized` HTTP status code
</Info>

***

# Parameters

| Parameter              | Description                                                                                                                                       |
| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------- |
| `client_id` string     | Set up your API credentials through our Developer Portal, [learn more here](https://developers.criteo.com/retail-media/docs/connect-to-the-api) |
| `client_secret` string | Set up your API credentials through our Developer Portal, [learn more here](https://developers.criteo.com/retail-media/docs/connect-to-the-api) |
| `grant_type` string    | Must be `client_credentials`                                                                                                                      |

***

# Generate an Access Token

* This endpoint generates a new access token using your API credentials

<EndpointBadge method="post">
```http
https://api.criteo.com/oauth2/token
```
</EndpointBadge>

### Sample Request

<CodeGroup>
  ```bash cURL
  curl -X POST "https://api.criteo.com/oauth2/token" \
      -d 'client_id={client_id}' \
      -d 'client_secret={client_secret}' \
      -d 'grant_type=client_credentials'
  ```
</CodeGroup>

### Sample Response

<CodeGroup>
  ```json JSON
  {
      "access_token": "<TOKEN STRING>",
      "token_type": "Bearer",
      "expires_in": 900
  }
  ```
</CodeGroup>

***

What’s Next

* [API Response](/retail-media/v2024.10/docs/api-response)
* [API Pattern](/retail-media/v2024.10/docs/api-pattern)
* [Bulk Calls](/retail-media/v2024.10/docs/bulk-calls)
* [Campaign Structure](/retail-media/v2024.10/docs/campaign-structure)
* [List of Endpoints](/retail-media/v2024.10/docs/list-of-endpoints-including-preferred-deals)
* [Rate Limits](/retail-media/v2024.10/docs/rate-limits)
* [Statuses](/retail-media/v2024.10/docs/status)
